# RiseIn-Bootcamp

./: README.md
backend/: Cargo.toml
backend/src/: ai.rs  handlers.rs  main.rs  stellar.rs
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: package-lock.json
frontend/src/: AcademicEventTracker.jsx  App.js
