[package]
name = "academic-tracker-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
stellar_sdk = "0.1"
regex = "1.10"